# emuladorCPU_6502

./: CMakeLists.txt
lib/src/: main_6502.cpp  main_6502.h
test/: CMakeLists.txt  Makefile
test/src/: 6502Test.cpp  main_6502.cpp
